2010-05-29  hiraku <hiraku@sapporo.email.ne.jp>

	* hiki/util.rb (Hiki::Util): add module function (get_common_data)
	for misc/plugin/history.rb

2010-05-29  hiraku <hiraku@sapporo.email.ne.jp>

	* hiki/util.rb (Hiki::Util): add module function (unified_diff)

	* hiki/filter/bayes_filter.rb: use Hiki::Util.unified_diff insted
	of Object#unified_diff (included Hiki::Util on top level).

2009-09-05  okkez  <okkez000@gmail.com>

	* hiki/util.rb (Hiki::Util): add module functions (escape,
	unescape, escape_html, h, unescape_html)
	(String#escape, unescape, escapeHTML, unescapeHTML): use
	Hiki::Util instead of CGI.

2009-09-03  okkez  <okkez000@gmail.com>

	* hiki/command.rb (Hiki::Command): do not include Hiki::Util on
	top level.

	* hiki/plugin.rb (Hiki::Plugin): include Hiki::Util instead of ERB::Util.

2009-08-31  okkez  <okkez000@gmail.com>

	* hiki/auth/typekey.rb: use literal instead of obvious new method.
	* hiki/auth/typekey.rb: ditto.
	* misc/plugin/attach.rb: ditto.
	* misc/plugin/category.rb: ditto.
	* misc/plugin/google-sitemaps.rb: ditto.
	* misc/plugin/incremental_search.rb: ditto.
	* misc/plugin/keyword.rb: ditto.
	* misc/plugin/math.rb: ditto.
	* misc/plugin/pagerank.rb: ditto.
	* misc/plugin/rss.rb: ditto.
	* misc/plugin/src.rb: ditto.
	* plugin/01sp.rb: ditto.
	* style/default/html_formatter.rb: ditto.
	* style/rd+/anchorlist.rb: ditto.
	* style/rd+/rd2html.rb: ditto.


2009-08-30  okkez  <okkez000@gmail.com>

	* hiki/command.rb: use Hiki::Util#escape, Hiki::Util#unescape,
	Hiki::Util#escape_html and Hiki::Util#unescape_html instead of
	CGI.escape, CGI.unescape, CGI.escapeHTML and CGI.unescapeHTML.
	* hiki/db/flatfile.rb: ditto.
	* hiki/filter/bayes_filter.rb: ditto.
	* hiki/interwiki.rb: ditto.
	* hiki/repos/cvs.rb: ditto.
	* hiki/repos/default.rb: ditto.
	* hiki/repos/git.rb: ditto.
	* hiki/repos/hg.rb: ditto.
	* hiki/repos/plain.rb: ditto.
	* hiki/repos/svn.rb: ditto.
	* hiki/storage.rb: ditto.
	* hiki/util.rb: ditto.